--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,7 @@
-/* CSS code */
-#popup-message {
-    display: none;
+#message {
     position: absolute;
-    top: 30px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-#popup-text:hover + #popup-message {
-    display: block;
-}
-.container {
-    width: 100%;
-    text-align: center;
+    display: none;
+    background-color: #eee;
+    border: 1px solid #333;
+    padding: 5px;
 }
